--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lesson03">
         <activity
+            android:name=".ScreenActivity"
+            android:exported="false"
+            android:label="@string/title_activity_screen" />
+        <activity
+            android:name=".screen"
+            android:exported="false" />
+        <activity
             android:name=".signin"
             android:exported="false" />
         <activity
